# rookie

./: .env.example  .gitignore  MASTERPLAN.md  README.md  Rookie Website Design Brief.md  alembic.ini  gaapt-frontend-design-brief.md  pyproject.toml  start.sh  stop.sh
.cursor/plans/: rookie_master_specification_37848161.plan.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  personal-tax-full-product-plan.md
.planning/release/: personal-tax-v1-release-contract.md
docs/: rookie-readme-cpa.md
docs/Rookie Website Design Brief/: Rookie Website Design Brief.md
docs/accessibility/: phase5-wcag-audit-2026-02-06.md
docs/legacy/: gentle-strolling-bee.md  masterplan-webclaude.md  rookie-discovery-interview.md  rookie-master-plan-codex.md  rookie-master-plan-cursor.md  rookie-master-plan-opus.md
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
migrations/: env.py
migrations/versions/: 83c01ef4c8fc_add_fulltext_index_to_skill_embeddings.py  c5fc18e7c719_initial_schema_with_all_models.py
skills/: example_skill.yaml
src/: main.py
src/agents/: __init__.py
src/api/: __init__.py  clients.py  demo.py  deps.py  health.py  integrations.py  middleware.py  review.py  status.py  tasks.py
src/context/: __init__.py  builder.py  profile.py
src/core/: config.py  database.py  logging.py  redis.py  sentry.py
src/documents/: __init__.py  classifier.py  confidence.py  extractor.py  model_resolver.py  models.py  prompts.py  scanner.py  validation.py
src/integrations/: __init__.py  storage.py
src/models/: __init__.py  artifact.py  base.py  client.py  log.py  skill.py  task.py
src/orchestration/: __init__.py  circuit_breaker.py  dispatcher.py  state_machine.py
src/search/: __init__.py  embeddings.py  hybrid.py
src/skills/: __init__.py  loader.py  models.py  selector.py
src/tax/: __init__.py  year_config.py
tests/: conftest.py  test_health.py  test_health_integration.py  test_logging.py
tests/api/: test_clients.py  test_demo.py  (+5 more)
(+135 files in other folders)
