[project]
name = "rookie"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.1",
    "anthropic>=0.76.0",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.128.0",
    "fsspec>=2026.1.0",
    "httpx>=0.28.1",
    "instructor>=1.14.4",
    "openpyxl>=3.1.5",
    "orjson>=3.11.5",
    "pgvector>=0.4.2",
    "pybreaker>=1.4.1",
    "pydantic-settings>=2.12.0",
    "pydantic-yaml>=1.6.0",
    "python-statemachine>=2.5.0",
    "redis>=7.1.0",
    "ruamel-yaml>=0.18.17",
    "sentry-sdk>=2.50.0",
    "sqlalchemy[asyncio]>=2.0.46",
    "structlog>=25.5.0",
    "voyageai>=0.3.7",
]

[dependency-groups]
dev = [
    "asgi-lifespan>=2.1.0",
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.14",
]

[tool.pytest.ini_options]
markers = [
    "integration: tests that require live services",
]
